--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments for Apple Fix	</title>
-	<atom:link href="https://sanket24m.github.io/Apple/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://sanket24m.github.io/Apple/</link>
+	<atom:link href="https://Sanket24M.github.com/Apple/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://Sanket24M.github.com/Apple/</link>
 	<description>Just another WordPress site</description>
 	<lastBuildDate>Tue, 26 May 2020 12:15:22 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -20,11 +20,11 @@
 	<item>
 		<title>
 		Comment on Hello world! by A WordPress Commenter		</title>
-		<link>https://sanket24m.github.io/Apple/2020/05/26/hello-world/#comment-1</link>
+		<link>https://Sanket24M.github.com/Apple/2020/05/26/hello-world/#comment-1</link>
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
 		<pubDate>Tue, 26 May 2020 12:15:22 +0000</pubDate>
-		<guid isPermaLink="false">https://sanket24m.github.io/Apple/?p=1#comment-1</guid>
+		<guid isPermaLink="false">https://Sanket24M.github.com/Apple/?p=1#comment-1</guid>
 
 					<description><![CDATA[Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
