--- a/feed/index.html
+++ b/feed/index.html
@@ -9,8 +9,8 @@
 
 <channel>
 	<title>Apple Fix</title>
-	<atom:link href="https://sanket24m.github.io/Apple/feed/" rel="self" type="application/rss+xml" />
-	<link>http://sanket24m.github.io/Apple/</link>
+	<atom:link href="https://Sanket24M.github.com/Apple/feed/" rel="self" type="application/rss+xml" />
+	<link>http://Sanket24M.github.com/Apple/</link>
 	<description>Just another WordPress site</description>
 	<lastBuildDate>Tue, 26 May 2020 12:15:22 +0000</lastBuildDate>
 	<language>en-US</language>
@@ -21,20 +21,20 @@
 	<generator>https://wordpress.org/?v=5.4.2</generator>
 	<item>
 		<title>Hello world!</title>
-		<link>https://sanket24m.github.io/Apple/2020/05/26/hello-world/</link>
-					<comments>https://sanket24m.github.io/Apple/2020/05/26/hello-world/#comments</comments>
+		<link>https://Sanket24M.github.com/Apple/2020/05/26/hello-world/</link>
+					<comments>https://Sanket24M.github.com/Apple/2020/05/26/hello-world/#comments</comments>
 		
 		<dc:creator><![CDATA[admin]]></dc:creator>
 		<pubDate>Tue, 26 May 2020 12:15:22 +0000</pubDate>
 				<category><![CDATA[Uncategorized]]></category>
-		<guid isPermaLink="false">https://sanket24m.github.io/Apple/?p=1</guid>
+		<guid isPermaLink="false">https://Sanket24M.github.com/Apple/?p=1</guid>
 
 					<description><![CDATA[Welcome to WordPress. This is your first post. Edit or delete it, then start writing!]]></description>
 										<content:encoded><![CDATA[
 <p>Welcome to WordPress. This is your first post. Edit or delete it, then start writing!</p>
 ]]></content:encoded>
 					
-					<wfw:commentRss>https://sanket24m.github.io/Apple/2020/05/26/hello-world/feed/</wfw:commentRss>
+					<wfw:commentRss>https://Sanket24M.github.com/Apple/2020/05/26/hello-world/feed/</wfw:commentRss>
 			<slash:comments>1</slash:comments>
 		
 		
