--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -7,10 +7,10 @@
 	>
 <channel>
 	<title>
-	Comments for Apple Fix	</title>
+	Comments for Mapple Fix	</title>
 	<atom:link href="https://mapplefix.com/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>http://mapplefix.com/</link>
-	<description>Just another WordPress site</description>
+	<description>iPhone repair Services Online</description>
 	<lastBuildDate>Tue, 26 May 2020 12:15:22 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
