--- a/feed/index.html
+++ b/feed/index.html
@@ -8,10 +8,10 @@
 	>
 
 <channel>
-	<title>Apple Fix</title>
+	<title>Mapple Fix</title>
 	<atom:link href="https://mapplefix.com/feed/" rel="self" type="application/rss+xml" />
 	<link>http://mapplefix.com/</link>
-	<description>Just another WordPress site</description>
+	<description>iPhone repair Services Online</description>
 	<lastBuildDate>Tue, 26 May 2020 12:15:22 +0000</lastBuildDate>
 	<language>en-US</language>
 	<sy:updatePeriod>
